adds nginx recipe for hudson and uses it in vagrant_main

--- a/site-cookbooks/nginx/templates/default/vhost_proxy.conf.erb
+++ b/site-cookbooks/nginx/templates/default/vhost_proxy.conf.erb
@@ -15,7 +15,9 @@ server {
 
   access_log  <%= @access_log %>;
   error_log   <%= @error_log %>;
+  <% if @root %>
   root        <%= @root %>;
+  <% end %>
   index  index.html;
 
   location / {
